--- a/mixin-maven-plugin/pom.xml
+++ b/mixin-maven-plugin/pom.xml
@@ -10,9 +10,6 @@
 	<packaging>maven-plugin</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 
-	<properties>
-		<mavenVersion>3.1.0</mavenVersion>
-	</properties>
 	<dependencies>
 
 		<dependency>
@@ -23,8 +20,13 @@
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-core</artifactId>
-			<version>${mavenVersion}</version>
+			<version>${maven-core.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-utils</artifactId>
+			<version>${plexus-utils.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -38,7 +40,7 @@
 				<plugin>
 					<groupId>org.codehaus.plexus</groupId>
 					<artifactId>plexus-component-metadata</artifactId>
-					<version>2.1.1</version>
+					<version>${plexus-component-metadata.version}</version>
 					<executions>
 						<execution>
 							<id>generate-metadata</id>
