--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,45 @@
 	<url>http://odavid.github.io/maven-plugins</url>
 
 	<properties>
+		<maven-core.version>3.9.0</maven-core.version>
+		<maven-compiler-plugin.release>17</maven-compiler-plugin.release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
-		<version.org.codehaus.groovy>2.4.3</version.org.codehaus.groovy>
 		<version.groovy-eclipse-compiler>2.9.2-01</version.groovy-eclipse-compiler>
 		<version.groovy-eclipse-batch>2.4.3-01</version.groovy-eclipse-batch>
-		<version.gmaven>1.5</version.gmaven>
+		<version.gmaven>1.5-jenkins-3</version.gmaven>
+		<maven-plugin-plugin.version>3.7.1</maven-plugin-plugin.version>
+		<maven-invoker-plugin.version>3.4.0</maven-invoker-plugin.version>
+		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
+		<maven-surefire-plugin.version>3.0.0-M8</maven-surefire-plugin.version>
+		<maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
+		<maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
+		<versions-maven-plugin.version>2.14.2</versions-maven-plugin.version>
+		<maven-release-plugin.version>3.12.1</maven-release-plugin.version>
+		<maven-scm-plugin.version>1.13.0</maven-scm-plugin.version>
+		<maven-deploy-plugin.version>3.1.0</maven-deploy-plugin.version>
+		<maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
+		<maven-site-plugin.version>3.12.14</maven-site-plugin.version>
+		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+		<maven-install-plugin.version>3.1.0</maven-install-plugin.version>
+		<maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
+		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+		<maven-help-plugin.version>3.3.0</maven-help-plugin.version>
+		<xml-maven-plugin.version>1.0.2</xml-maven-plugin.version>
+		<build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
+		<wagon-ssh.version>2.4</wagon-ssh.version>
+		<plexus-utils.version>3.5.0</plexus-utils.version>
+		<junit.version>4.13.2</junit.version>
+		<commons-io.version>2.11.0</commons-io.version>
+		<doxia-core.version>1.12.0</doxia-core.version>
+		<doxia-sink-api.version>1.12.0</doxia-sink-api.version>
+		<doxia-site-renderer.version>1.11.1</doxia-site-renderer.version>
+		<maven-plugin-annotations.version>3.7.1</maven-plugin-annotations.version>
+		<maven-reporting-impl.version>2.2</maven-reporting-impl.version>
+		<maven-reporting-api.version>3.0</maven-reporting-api.version>
+		<maven-plugin-api.version>3.9.0</maven-plugin-api.version>
+		<plexus-component-metadata.version>1.5.5</plexus-component-metadata.version>
+		<groovy-all.version>4.0.9</groovy-all.version>
 	</properties>
 
 	<licenses>
@@ -43,7 +75,7 @@
 	</developers>
 
 	<prerequisites>
-		<maven>3.0</maven>
+		<maven>3.2.5</maven>
 	</prerequisites>
 
 	<scm>
@@ -75,59 +107,59 @@
 			<dependency>
 				<groupId>org.apache.maven</groupId>
 				<artifactId>maven-plugin-api</artifactId>
-				<version>3.0</version>
+				<version>${maven-plugin-api.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven.reporting</groupId>
 				<artifactId>maven-reporting-api</artifactId>
-				<version>3.0</version>
+				<version>${maven-reporting-api.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven.reporting</groupId>
 				<artifactId>maven-reporting-impl</artifactId>
-				<version>2.2</version>
+				<version>${maven-reporting-impl.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven.plugin-tools</groupId>
 				<artifactId>maven-plugin-annotations</artifactId>
-				<version>3.2</version>
+				<version>${maven-plugin-annotations.version}</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven.doxia</groupId>
 				<artifactId>doxia-site-renderer</artifactId>
-				<version>1.4</version>
+				<version>${doxia-site-renderer.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven.doxia</groupId>
 				<artifactId>doxia-sink-api</artifactId>
-				<version>1.4</version>
+				<version>${doxia-sink-api.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven.doxia</groupId>
 				<artifactId>doxia-core</artifactId>
-				<version>1.4</version>
+				<version>${doxia-core.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
-				<version>2.4</version>
+				<version>${commons-io.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.11</version>
+				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.plexus</groupId>
 				<artifactId>plexus-utils</artifactId>
-				<version>3.0.9</version>
+				<version>${plexus-utils.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.groovy</groupId>
 				<artifactId>groovy-all</artifactId>
-				<version>${version.org.codehaus.groovy}</version>
+				<version>${groovy-all.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.gmaven</groupId>
@@ -153,7 +185,7 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>2.4</version>
+				<version>${wagon-ssh.version}</version>
 			</extension>
 		</extensions>
 		<pluginManagement>
@@ -161,67 +193,67 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>1.9.1</version>
+					<version>${build-helper-maven-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>xml-maven-plugin</artifactId>
-					<version>1.0</version>
+					<version>${xml-maven-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-help-plugin</artifactId>
-					<version>2.2</version>
+					<version>${maven-help-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.3</version>
+					<version>${maven-compiler-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-clean-plugin</artifactId>
-					<version>2.5</version>
+					<version>${maven-clean-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-install-plugin</artifactId>
-					<version>2.4</version>
+					<version>${maven-install-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.3.0</version>
+					<version>${maven-jar-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>2.2.1</version>
+					<version>${maven-source-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-site-plugin</artifactId>
-					<version>3.12.1</version>
+					<version>${maven-site-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.9</version>
+					<version>${maven-javadoc-plugin.version}</version>
                     <configuration>
                         <tagletArtifacts>
                             <tagletArtifact>
                                 <groupId>org.apache.maven.plugin-tools</groupId>
                                 <artifactId>maven-plugin-tools-javadoc</artifactId>
-                                <version>3.3</version>
+                                <version>${maven-javadoc-plugin.version}</version>
                             </tagletArtifact>
                         </tagletArtifacts>
                     </configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.7</version>
+					<version>${maven-deploy-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-scm-plugin</artifactId>
-					<version>1.8.1</version>
+					<version>${maven-scm-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
-					<version>2.4</version>
+					<version>${maven-release-plugin.version}</version>
 					<configuration>
 						<preparationGoals>clean:clean</preparationGoals>
 						<autoVersionSubmodules>true</autoVersionSubmodules>
@@ -231,28 +263,28 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>versions-maven-plugin</artifactId>
-					<version>1.3.1</version>
+					<version>${versions-maven-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>2.8</version>
+					<version>${maven-dependency-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.6</version>
+					<version>${maven-resources-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.2</version>
+					<version>${maven-surefire-plugin.version}</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-plugin-plugin</artifactId>
-					<version>3.3</version>
+					<version>${maven-plugin-plugin.version}</version>
 					<configuration>
 						<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
 					</configuration>
@@ -277,7 +309,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-invoker-plugin</artifactId>
-					<version>3.4.0</version>
+					<version>${maven-invoker-plugin.version}</version>
 					<configuration>
 						<cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
 						<localRepositoryPath>${settings.localRepository}/it/repository</localRepositoryPath>
@@ -299,7 +331,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6</version>
+                <version>${nexus-staging-maven-plugin.version}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <!-- The Base URL of Nexus instance where we want to stage -->
